# limn

./: .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  appveyor.yml  callgrind.out.32539  index.html  search-index.js
backend/: Cargo.toml
backend/src/: events.rs  gfx.rs  glutin_window.rs  glyph.rs  lib.rs  window.rs
core/: Cargo.toml
core/src/: app.rs  color.rs  event.rs  geometry.rs  lib.rs  prelude.rs  render.rs  style.rs  ui.rs  window.rs
core/src/input/: drag.rs  mod.rs
core/src/resources/: font.rs  image.rs
core/src/widget/: filter.rs  mod.rs  property.rs
examples/: button.rs  circles.rs  clock.rs  counter.rs  crud.rs  edit_text.rs  first.rs  image.rs  list.rs  opengl_boxes.rs  rect.rs  scroll.rs  slider.rs  textbox.rs
examples/util/: mod.rs
implementors/lazy_static/: trait.LazyStatic.js
implementors/limn_layout/: trait.LayoutContainer.js  trait.LayoutRef.js
layout/: Cargo.toml  README.md
layout/src/: constraint.rs  grid_layout.rs  lib.rs  linear_layout.rs  solver.rs
layout/tests/: integration.rs
limn/: index.html  macro.component_style.html  macro.forward_event.html  macro.multi_event.html  macro.named_id.html  macro.style!.html  macro.style.html  multi_event.m.html  named_id.m.html  sidebar-items.js
limn/draw/: index.html  sidebar-items.js
limn/prelude/: index.html  macro.btreemap.html  macro.btreeset.html  macro.constraints.html  macro.convert_args.html  macro.hashmap.html  macro.hashset.html  sidebar-items.js
limn/widgets/: index.html  sidebar-items.js
limn_core/: component_style.m.html  forward_event.m.html  index.html  macro.component_style.html  macro.forward_event.html  macro.multi_event.html  macro.named_id.html  macro.style.html  sidebar-items.js
limn_core/app/: FrameEvent.t.html  index.html  sidebar-items.js  struct.App.html  struct.FrameEvent.html
limn_core/color/: BLUE_HIGHLIGHT.v.html  FUSCHIA.v.html  GRAY_10.v.html  GRAY_20.v.html  GRAY_30.v.html  GRAY_40.v.html  GRAY_50.v.html  GRAY_60.v.html  GRAY_70.v.html  GRAY_80.v.html  GRAY_90.v.html  constant.BLACK.html  constant.BLUE.html  constant.BLUE_HIGHLIGHT.html  constant.CYAN.html  constant.FUSCHIA.html  constant.GRAY_10.html  constant.GRAY_20.html  constant.GRAY_30.html  constant.GRAY_40.html  constant.GRAY_50.html  constant.GRAY_60.html  constant.GRAY_70.html  constant.GRAY_80.html  constant.GRAY_90.html  constant.GREEN.html  constant.RED.html  constant.TRANSPARENT.html  constant.WHITE.html  constant.YELLOW.html  index.html  sidebar-items.js  struct.Color.html
limn_core/event/: EventArgs.t.html  EventHandler.t.html  event_global.v.html  fn.event_global.html  index.html  sidebar-items.js  struct.EventArgs.html  trait.EventHandler.html
limn_core/geometry/: DensityIndependentPixel.t.html  DevicePixel.t.html  Size.t.html  SizeExt.t.html  Vector.t.html  index.html  sidebar-items.js  struct.DevicePixel.html  trait.RectExt.html  trait.SizeExt.html  type.DensityIndependentPixel.html  type.Point.html  type.Rect.html  type.Size.html  type.Vector.html
limn_core/input/: DebugSettingsHandler.t.html  EscKeyCloseHandler.t.html  index.html  sidebar-items.js  struct.DebugSettingsHandler.html  struct.EscKeyCloseHandler.html  struct.InputEvent.html
limn_core/layout/: LayoutChanged.t.html  LayoutUpdated.t.html  LimnSolver.t.html  ResizeWindow.t.html  UpdateLayout.t.html  index.html  macro.constraints.html  sidebar-items.js  struct.LayoutChanged.html  struct.LayoutUpdated.html  struct.LimnSolver.html  struct.ResizeWindow.html  struct.UpdateLayout.html
limn_core/prelude/: LAYOUT.t.html  LinearLayoutSettings.t.html  enum.Align.html  enum.ItemAlignment.html  enum.Orientation.html  enum.Spacing.html  enum.Wrap.html  index.html  macro.btreemap.html  macro.btreeset.html  macro.constraints!.html  macro.constraints.html  macro.convert_args.html  macro.hashmap.html  macro.hashset.html  sidebar-items.js  struct.Constraint.html  struct.LAYOUT.html  struct.LinearLayoutSettings.html
limn_core/render/: RenderBuilder.t.html  draw_horizontal_line.v.html  draw_rect_outline.v.html  fn.draw_horizontal_line.html  fn.draw_rect_outline.html  index.html  sidebar-items.js  struct.RenderBuilder.html
limn_core/resources/: fn.init_resources.html  fn.resources.html  index.html  init_resources.v.html  resources.v.html  sidebar-items.js  struct.Map.html  struct.Resources.html  struct.WidgetId.html
limn_core/style/: Component.t.html  ComponentStyle.t.html  DrawComponentStyle.t.html  DrawStyle.t.html  ModifierComponentStyle.t.html  WidgetModifier.t.html  index.html  sidebar-items.js  struct.DrawState.html  struct.DrawStyle.html  struct.Theme.html  trait.Component.html  trait.ComponentStyle.html  trait.DrawComponentStyle.html  trait.ModifierComponentStyle.html  trait.WidgetModifier.html
limn_core/ui/: index.html  (+18 more)
limn_layout/: EditVariable.t.html  ExactFrame.t.html  LayoutContainer.t.html  LayoutId.t.html  LayoutRef.t.html  LayoutVars.t.html  Rect.t.html  VarType.t.html  VariableEditable.t.html  enum.VarType.html  index.html  macro.constraints.html  sidebar-items.js  struct.EditVariable.html  struct.ExactFrame.html  struct.Frame.html  struct.LAYOUT.html  struct.Layout.html  struct.LayoutVars.html  struct.VariableEditable.html  trait.LayoutContainer.html  trait.LayoutRef.html  type.LayoutId.html  type.Length.html  type.Point.html  type.Rect.html  type.Size.html
limn_text_layout/: enum.Wrap.html  fn.get_line_rects.html  fn.get_positioned_glyphs.html  fn.get_text_height.html  fn.get_text_size.html  fn.lines.html  fn.pt_to_px.html  fn.pt_to_scale.html  fn.px_to_pt.html  get_line_rects.v.html  get_positioned_glyphs.v.html  get_text_height.v.html  get_text_size.v.html  index.html  px_to_pt.v.html  sidebar-items.js  struct.Lines.html  type.Font.html  type.PositionedGlyph.html
src/: app.rs  color.rs  errors.rs  event.rs  eventbus.rs  font.rs  geometry.rs  layout.rs  lib.rs  main.rs  prelude.rs  render.rs  style.rs  text.rs  theme.rs  ui.rs  util.rs  widget.rs  window.rs
tests/: style.rs
text_layout/: Cargo.toml  README.md
text_layout/src/: cursor.rs  glyph.rs  lib.rs  line.rs  types.rs
(+595 files in other folders)
