[package]
name = "limn"
version = "0.0.1"
authors = ["Chris Tolliday <ctolliday@gmail.com>"]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
categories = ["gui"]
description = "Cross platform, event driven GUI library."
license = "MIT OR Apache-2.0"
repository = "https://github.com/christolliday/limn.git"
homepage = "https://github.com/christolliday/limn"

[workspace]

[dependencies]
limn-text_layout = { path = "text_layout", version = "0.0.1" }
limn-layout = { path = "layout", version = "0.0.1" }
cassowary = "0.3.0"

euclid = "0.16"
log = "0.3"
gleam = "0.4.20"

webrender = { git = "https://github.com/servo/webrender", rev = "c383ef73113d0d5f8634385565ce83a4c84ca944" }

stb_truetype = "0.2.1"
app_units = "0.6"
rusttype = "0.2.1"
glutin = "0.12.0"
image = "0.16"

lazy_static = "0.2.2"
linked-hash-map = "0.5.0"
stable_bst = "0.2.0"
maplit = "0.1.4"
multi_mut = "0.1.3"
font-loader = "0.5.0"
failure = "0.1.1"
mopa = "0.2.2"

[dev-dependencies]
find_folder = "0.3.0"
chrono = "0.4"
env_logger = "0.4"
lipsum = "0.4"
rand = "0.3"

[features]
nightly = []
