[package]
name = "backend"
version = "0.1.0"
authors = ["Chris Tolliday <ctolliday@gmail.com>"]

[dependencies]
pistoncore-input = "0.15.0"
glium = "0.15.0"
glutin = "0.6.1"
piston2d-graphics = "0.19"

gfx = "0.12.0"
gfx_core = "0.4.0"
gfx_device_gl = "0.11.0"
pistoncore-window = "0.24.0"
piston2d-gfx_graphics = "0.33.1"
piston-texture = "0.5.0"
shader_version = "0.2.0"
pistoncore-glutin_window = "0.33.0"

rusttype = "0.2.0"