[package]
name = "backend"
version = "0.1.0"
authors = ["Chris Tolliday <ctolliday@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
glium = "0.15.0"
glutin = "0.9.1"
piston2d-graphics = "0.21.0"

gfx = "0.14.0"
gfx_core = "0.6.0"
gfx_device_gl = "0.13.0"
piston2d-gfx_graphics = "0.38.0"
piston-texture = "0.5.0"
shader_version = "0.2.1"

gl = "0.6.0"

rusttype = "0.2.1"
