[package]
name = "limn-layout"
version = "0.1.0"
authors = ["Chris Tolliday <ctolliday@gmail.com>"]

[dependencies]
cassowary = { git = "https://github.com/christolliday/cassowary-rs", rev = "31238b518189823a61523a884cd39d09d54defa3" }
euclid = "0.15.1"
log = "0.3"
lazy_static = "0.2.2"

[dev-dependencies]
maplit = "0.1.4"
