[package]
name = "limn-layout"
version = "0.1.0"
authors = ["Chris Tolliday <ctolliday@gmail.com>"]

[dependencies]
cassowary = { git = "https://github.com/christolliday/cassowary-rs", rev = "c7f57f8661b736be7ddf537b1d4dccbc5e3d13db" }
euclid = "0.15.1"
log = "0.3"
lazy_static = "0.2.2"

[dev-dependencies]
maplit = "0.1.4"
