[package]
name = "limn-text_layout"
version = "0.0.1"
authors = ["Conrod Developers", "Chris Tolliday <ctolliday@gmail.com>"]
keywords = ["text", "layout"]
categories = ["gui"]
description = "Text layout for GUIs."
license = "MIT OR Apache-2.0"
repository = "https://github.com/christolliday/limn.git"
homepage = "https://github.com/christolliday/limn"

[dependencies]
rusttype = "0.2.1"
euclid = "0.16"
